添加进程隐藏功能：实现隐藏、取消隐藏和清除所有隐藏进程的功能，更新相关文件和接口。

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,3 +1,8 @@
-obj-y += memory.o
-obj-y += process.o
-obj-y += entry.o
+# 1. 声明要编译成模块的目标文件。
+#    Kbuild 会自动根据这个名字生成 my_driver.ko
+obj-m += my_driver.o
+
+# 2. 声明 my_driver.o 是由哪些源文件编译链接而成的。
+my_driver-objs := memory.o process.o hide_proc.o entry.o
+
+# 这就是全部了！不需要 "all:", "clean:", 也不需要 $(MAKE) 命令。
