feat(input): Add touch event interception and injection
This commit introduces a new feature to intercept and inject touchscreen input events from a user-space client. This allows for advanced input manipulation, such as automation, remote control, or input simulation for testing.

The implementation is centered around hooking the `evdev` event handler of the system's primary touchscreen device. A robust device discovery mechanism is used, which first attempts to find the device list via `kallsyms_lookup_name` and falls back to a more compatible method if symbols are not available.

Key components of this feature include:
- A shared memory ring buffer, established via `mmap`, for high-performance, low-latency communication of touch points between the kernel and user space.
- New `ioctl` commands to install/uninstall the hook, set the operational mode, and notify the kernel of new data in the buffer.
- Three distinct operational modes:
  - `TOUCH_MODE_DISABLED`: The hook is inactive.
  - `TOUCH_MODE_FILTER_MODIFY`: Intercepts and processes real hardware events alongside injected events.
  - `TOUCH_MODE_EXCLUSIVE_INJECT`: Blocks all real hardware events and exclusively processes events injected from the user-space buffer.
- Proper state management and cleanup are handled when the client process closes the device file or when the kernel module is unloaded.

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -3,7 +3,7 @@
 obj-m += my_driver.o
 
 # 2. 声明 my_driver.o 是由哪些源文件编译链接而成的。
-my_driver-objs := memory.o process.o hide_proc.o hide_kill.o entry.o anti_ptrace_detection.o cvector.o thread.o single_step.o spawn_suspend.o register.o mmu_breakpoint.o syscall_trace.o
+my_driver-objs := memory.o process.o hide_proc.o hide_kill.o entry.o anti_ptrace_detection.o cvector.o thread.o single_step.o spawn_suspend.o register.o mmu_breakpoint.o syscall_trace.o touch_input.o
 
 # Add inline hook files
 EXTRA_CFLAGS += -g -O0 -Wno-error=incompatible-pointer-types -Wno-error=unused-function
