--- a/.github/workflows/build-kernel-chopin.yml
+++ b/.github/workflows/build-kernel-chopin.yml
@@ -13,22 +13,38 @@ jobs:
 
     steps:
     - name: Checkout Module Source
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Install Dependencies
       run: |
         sudo apt-get update
         sudo apt-get install -y bc bison build-essential ccache curl flex g++-multilib gcc-multilib git gnupg gperf imagemagick lib32ncurses5-dev lib32readline-dev lib32z1-dev libelf-dev liblz4-tool libncurses5 libncurses5-dev libsdl1.2-dev libssl-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev
 
+    - name: Cache Dependencies
+      uses: actions/cache@v4
+      with:
+        path: |
+          kernel_source
+          clang
+          ~/.ccache
+        key: ${{ runner.os }}-kernel-chopin-${{ hashFiles('**/Makefile') }}
+        restore-keys: |
+          ${{ runner.os }}-kernel-chopin-
+
     - name: Clone Kernel Source
+      if: steps.cache.outputs.cache-hit != 'true'
       run: git clone --depth=1 https://github.com/SMlc666/android_kernel_chopin_android_T -b T kernel_source
 
     - name: Clone Toolchain
+      if: steps.cache.outputs.cache-hit != 'true'
       run: git clone --depth=1 https://gitlab.com/LeCmnGend/proton-clang.git -b clang-13 clang
 
     - name: Set up Environment
       run: |
         echo "$(pwd)/clang/bin" >> $GITHUB_PATH
+        echo "CCACHE_DIR=$(pwd)/.ccache" >> $GITHUB_ENV
+        echo "USE_CCACHE=1" >> $GITHUB_ENV
+        ccache -M 5G
 
     - name: Prepare Kernel Source for Module Build
       working-directory: ./kernel_source
@@ -48,7 +64,7 @@ jobs:
 
         # Enable the module config
         scripts/config --file out/.config --set-str CONFIG_KERNEL_HACK m
-
+        
     - name: Build Kernel Module
       working-directory: ./kernel_source
       run: |
@@ -60,7 +76,7 @@ jobs:
         make -j$(nproc --all) O=out modules_prepare
         
         make -j$(nproc --all) O=out M=drivers/hack \
-          CC=clang \
+          CC="ccache clang" \
           CLANG_TRIPLE=aarch64-linux-gnu- \
           LD=ld.lld \
           STRIP=llvm-strip \
@@ -72,7 +88,7 @@ jobs:
           CONFIG_NO_ERROR_ON_MISMATCH=y
 
     - name: Upload Artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: KernelModule
         path: kernel_source/drivers/hack/my_driver.ko
