ci(workflow): 优化构建工作流中的依赖安装步骤
为了提高 CI 构建的兼容性和稳定性，对依赖安装步骤进行了重构。

- 根据 Ubuntu 版本 (20.04/22.04 vs. 其他) 安装不同的软件包集合。
- 引入 PYTHON_VERSION 环境变量，以支持在 Python 2 和 Python 3 之间进行选择。
- 增加了时区和 DEBIAN_FRONTEND 的设置，以避免在软件包安装过程中出现交互式提示，确保脚本能够无人值守运行。

--- a/.github/workflows/build-kernel-chopin.yml
+++ b/.github/workflows/build-kernel-chopin.yml
@@ -11,14 +11,44 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    env:
+      PYTHON_VERSION: "3"
+
     steps:
     - name: Checkout Module Source
       uses: actions/checkout@v4
 
-    - name: Install Dependencies
+    - name: Install necessary packages
+      shell: bash
       run: |
         sudo apt-get update
-        sudo apt-get install -y bc bison build-essential ccache curl flex g++-multilib gcc-multilib git gnupg gperf imagemagick lib32ncurses5-dev lib32readline-dev lib32z1-dev libelf-dev liblz4-tool libncurses5 libncurses5-dev libsdl1.2-dev libssl-dev libxml2 libxml2-utils lzop pngcrush rsync schedtool squashfs-tools xsltproc zip zlib1g-dev
+
+        # Set locale
+        sudo ln -fs /usr/share/zoneinfo/America/New_York /etc/localtime
+        export DEBIAN_FRONTEND=noninteractive
+        sudo apt-get install tzdata lsb-release -y
+        sudo dpkg-reconfigure --frontend noninteractive tzdata
+
+        lsb_release -a
+        UBUNTU_VERSION=$(lsb_release -sr)
+
+        if [ $UBUNTU_VERSION == "22.04" ] || [ $UBUNTU_VERSION == "20.04" ]; then
+          sudo apt-get install git ccache automake flex lzop bison gperf build-essential zip curl zlib1g-dev g++-multilib libxml2-utils bzip2 libbz2-dev libbz2-1.0 libghc-bzlib-dev squashfs-tools pngcrush schedtool dpkg-dev liblz4-tool make optipng maven libssl-dev pwgen libswitch-perl policycoreutils minicom libxml-sax-base-perl libxml-simple-perl bc libc6-dev-i386 lib32ncurses5-dev libx11-dev lib32z-dev libgl1-mesa-dev xsltproc unzip device-tree-compiler wget curl -y
+          sudo apt-get install p7zip p7zip-full -y
+          if [ "${{ env.PYTHON_VERSION }}" == "3" ]; then
+              sudo apt install python2 python3 -y
+          elif [ "${{ env.PYTHON_VERSION }}" == "2" ]; then
+              sudo apt install python2 -y
+              sudo rm -f /usr/bin/python
+              sudo ln -s /usr/bin/python2.7 /usr/bin/python
+          else
+              echo "You need choose a python version."
+              false
+          fi
+        else
+          sudo apt-get install git ccache automake flex lzop bison gperf build-essential zip curl zlib1g-dev g++-multilib libxml2-utils bzip2 libbz2-dev libbz2-1.0 libghc-bzlib-dev squashfs-tools pngcrush schedtool dpkg-dev make optipng maven libssl-dev pwgen libswitch-perl policycoreutils minicom libxml-sax-base-perl libxml-simple-perl bc libc6-dev-i386 libx11-dev lib32z-dev libgl1-mesa-dev xsltproc unzip device-tree-compiler python3 -y
+          sudo apt-get install zstd libc6 binutils libc6-dev-i386 gcc g++ p7zip p7zip-full wget curl -y
+        fi
 
     - name: Cache Dependencies
       uses: actions/cache@v4
