ci(workflow): 重构内核构建步骤以导出环境变量
将 CC, LD, CLANG_TRIPLE 等构建相关的环境变量从单个 make 命令中移出，并在步骤开始时统一导出。

这样做可以确保该步骤中的所有 make 命令（包括 `modules_prepare`）都使用相同的、正确的工具链和配置，提高了脚本的健壮性和可读性。

--- a/.github/workflows/build-kernel-chopin.yml
+++ b/.github/workflows/build-kernel-chopin.yml
@@ -96,24 +96,25 @@ jobs:
     - name: Build Kernel Module
       working-directory: ./kernel_source
       run: |
+        # Export all necessary variables so they are used by all make commands
         export ARCH=arm64
         export SUBARCH=arm64
         export KBUILD_BUILD_USER="GitHub"
         export KBUILD_BUILD_HOST="Actions"
-        
+        export CC="ccache clang"
+        export CLANG_TRIPLE=aarch64-linux-gnu-
+        export LD=ld.lld
+        export STRIP=llvm-strip
+        export AS=llvm-as
+        export AR=llvm-ar
+        export NM=llvm-nm
+        export OBJCOPY=llvm-objcopy
+        export OBJDUMP=llvm-objdump
+        export CONFIG_NO_ERROR_ON_MISMATCH=y
+
         make -j$(nproc --all) O=out modules_prepare
         
-        make -j$(nproc --all) O=out M=drivers/hack \
-          CC="ccache clang" \
-          CLANG_TRIPLE=aarch64-linux-gnu- \
-          LD=ld.lld \
-          STRIP=llvm-strip \
-          AS=llvm-as \
-          AR=llvm-ar \
-          NM=llvm-nm \
-          OBJCOPY=llvm-objcopy \
-          OBJDUMP=llvm-objdump \
-          CONFIG_NO_ERROR_ON_MISMATCH=y
+        make -j$(nproc --all) O=out M=drivers/hack
 
     - name: Upload Artifact
       uses: actions/upload-artifact@v4
