ci(workflow): 改进 chopin 构建缓存并使模块集成幂等
- 缓存 key 增加 kernel/** 与 Makefile，模块变更触发缓存失效
- 复制模块前清理 drivers/hack，使用 cp -a 保留属性避免残留
- 向 Kconfig/Makefile 的追加改为幂等，避免重复条目

--- a/.github/workflows/build-kernel-chopin.yml
+++ b/.github/workflows/build-kernel-chopin.yml
@@ -34,7 +34,7 @@ jobs:
           kernel_source
           clang
           ~/.ccache
-        key: ${{ runner.os }}-kernel-chopin-${{ hashFiles('**/Makefile') }}
+        key: ${{ runner.os }}-kernel-chopin-${{ hashFiles('**/Makefile', 'kernel/**') }}
         restore-keys: |
           ${{ runner.os }}-kernel-chopin-
 
@@ -56,16 +56,18 @@ jobs:
     - name: Prepare Kernel Source for Module Build
       working-directory: ./kernel_source
       run: |
-        # Copy module source into kernel tree
-        cp -r ../kernel ./drivers/hack
+        # Reset module directory and sync latest code
+        rm -rf drivers/hack
+        mkdir -p drivers/hack
+        cp -a ../kernel/. drivers/hack/
 
-        # Add module to Kconfig and Makefile
-        echo 'source "drivers/hack/Kconfig"' >> drivers/Kconfig
-        echo 'obj-$(CONFIG_KERNEL_HACK) += hack/' >> drivers/Makefile
+        # Add module to Kconfig and Makefile (idempotent)
+        grep -q 'source "drivers/hack/Kconfig"' drivers/Kconfig || echo 'source "drivers/hack/Kconfig"' >> drivers/Kconfig
+        grep -q 'obj-$(CONFIG_KERNEL_HACK) += hack/' drivers/Makefile || echo 'obj-$(CONFIG_KERNEL_HACK) += hack/' >> drivers/Makefile
 
         # Configure the kernel
         make O=out ARCH=arm64 CC=clang CLANG_TRIPLE=aarch64-linux-gnu- CROSS_COMPILE=aarch64-linux-gnu- chopin_user_defconfig
-        
+
         # Enable the module config
         scripts/config --file out/.config --enable CONFIG_KERNEL_HACK
 
