ci(workflow): 使 chopin 构建中的源码与工具链准备幂等
将 Clone 步骤改为 Ensure，存在 .git 时跳过，否则清理目录后再 clone。
移除 cache-hit 条件，避免缓存命中导致跳过克隆、目录缺失或脏状态。
提升在缓存恢复与重复运行场景下的稳定性与可重复性。

--- a/.github/workflows/build-kernel-chopin.yml
+++ b/.github/workflows/build-kernel-chopin.yml
@@ -38,13 +38,23 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-kernel-chopin-
 
-    - name: Clone Kernel Source
-      if: steps.cache.outputs.cache-hit != 'true'
-      run: git clone --depth=1 https://github.com/SMlc666/android_kernel_chopin_android_T -b T kernel_source
+    - name: Ensure Kernel Source
+      run: |
+        if [ -d kernel_source/.git ]; then
+          echo "kernel_source already prepared"
+        else
+          rm -rf kernel_source
+          git clone --depth=1 https://github.com/SMlc666/android_kernel_chopin_android_T -b T kernel_source
+        fi
 
-    - name: Clone Toolchain
-      if: steps.cache.outputs.cache-hit != 'true'
-      run: git clone --depth=1 https://gitlab.com/LeCmnGend/proton-clang.git -b clang-13 clang
+    - name: Ensure Toolchain
+      run: |
+        if [ -d clang/.git ]; then
+          echo "clang already prepared"
+        else
+          rm -rf clang
+          git clone --depth=1 https://gitlab.com/LeCmnGend/proton-clang.git -b clang-13 clang
+        fi
 
     - name: Set up Environment
       run: |
